projetGL/src/test/deca/codegen/valid/ourTest/test_unary_float.deca
// Description:
//    Test de l'utilisation de l'opérateur unary sur float
// Resultats:
//    -47 47 -47 en float
{
    float a=47;
    print(-a," ");
    if(--a==47){
        print(a," ");
    }
    print(---a," ");
}