projetGL/src/test/deca/codegen/invalid/test_division_zero_float.deca
// Description :
//    Test de l'opération modulo avec un diviseur nul sur un flottant
//
// Resultats:
//    Erreur : Débordement floattant
{
    float x= 2.0/0;
}